# wg-config

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  readme.md  requirements.txt  wg_config.py
.github/: CODEOWNERS
.github/workflows/: lint.yaml  release-please.yaml  release-please.yml
tests/: test_cli.py
